fix(ci): fix setup-dlang and rename d.yml to ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,12 +17,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    
-    - uses: dlang-community/setup-dlang@master
-    
+
+    - uses: dlang-community/setup-dlang@v1
+
     - uses: purcell/setup-emacs@master
       with:
         version: 27.2
-        
+
     - name: 'Build & Test'
       run: ./test.sh
